remove controlsfx lib from project

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -26,15 +26,14 @@ dist.archive.excludes=
 dist.dir=dist
 dist.jar=${dist.dir}/Car_Mart_Inventory.jar
 dist.javadoc.dir=${dist.dir}/javadoc
-excludes=
-file.reference.controlsfx-8.0.1.jar=dist\\lib\\controlsfx-8.0.1.jar
+#excludes=
+#file.reference.controlsfx-8.0.1.jar=dist\\lib\\controlsfx-8.0.1.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${libs.jpa20-persistence.classpath}:\
     ${libs.MySQLDriver.classpath}:\
-    ${libs.eclipselink.classpath}:\
-    ${file.reference.controlsfx-8.0.1.jar}
+    ${libs.eclipselink.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
